[package]
name = "aoc-2019"
version = "0.1.0"
authors = ["Daniel Stöckel <daniel@somweyr.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "01-fuel"
path = "src/01-fuel.rs"

[[bin]]
name = "02-intcode"
path = "src/02-intcode.rs"

[[bin]]
name = "03-intersection"
path = "src/03-intersection.rs"

[[bin]]
name = "04-passcode"
path = "src/04-passcode.rs"

[[bin]]
name = "05-intcode"
path = "src/05-intcode.rs"

[[bin]]
name = "06-orbit"
path = "src/06-orbit.rs"

[[bin]]
name = "07-amplifier"
path = "src/07-amplifier.rs"

[[bin]]
name = "08-sif"
path = "src/08-sif.rs"

[[bin]]
name = "09-boost"
path = "src/09-boost.rs"

[[bin]]
name = "10-asteroids"
path = "src/10-asteroids.rs"

[[bin]]
name = "11-robot"
path = "src/11-robot.rs"

[lib]
name = "intcode"
path = "src/intcode.rs"
