[package]
name = "aoc-2019"
version = "0.1.0"
authors = ["Daniel Stöckel <daniel@somweyr.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3"

[[bin]]
name = "01-fuel"
path = "src/01-fuel.rs"

[[bin]]
name = "02-intcode"
path = "src/02-intcode.rs"

[[bin]]
name = "03-intersection"
path = "src/03-intersection.rs"

[[bin]]
name = "04-passcode"
path = "src/04-passcode.rs"

[[bin]]
name = "05-intcode"
path = "src/05-intcode.rs"

[[bin]]
name = "06-orbit"
path = "src/06-orbit.rs"

[[bin]]
name = "07-amplifier"
path = "src/07-amplifier.rs"

[[bin]]
name = "08-sif"
path = "src/08-sif.rs"

[[bin]]
name = "09-boost"
path = "src/09-boost.rs"

[[bin]]
name = "10-asteroids"
path = "src/10-asteroids.rs"

[[bin]]
name = "11-robot"
path = "src/11-robot.rs"

[[bin]]
name = "12-gravity"
path = "src/12-gravity.rs"

[[bin]]
name = "13-arcade"
path = "src/13-arcade.rs"

[[bin]]
name = "14-refinery"
path = "src/14-refinery.rs"

[[bin]]
name = "15-oxygen"
path = "src/15-oxygen.rs"

[[bin]]
name = "16-fft"
path = "src/16-fft.rs"

[[bin]]
name = "17-scaffold"
path = "src/17-scaffold.rs"

[[bin]]
name = "18-keys"
path = "src/18-keys.rs"

[[bin]]
name = "19-tractor"
path = "src/19-tractor.rs"

[[bin]]
name = "20-donut"
path = "src/20-donut.rs"

[[bin]]
name = "21-spring"
path = "src/21-spring.rs"

[[bin]]
name = "22-shuffle"
path = "src/22-shuffle.rs"

[[bin]]
name = "23-network"
path = "src/23-network.rs"

[[bin]]
name = "24-bugs"
path = "src/24-bugs.rs"

[[bin]]
name = "25-santa"
path = "src/25-santa.rs"

[lib]
name = "intcode"
path = "src/intcode.rs"
